Fixed spacing issues

--- a/css/main.css
+++ b/css/main.css
@@ -29,6 +29,8 @@ body {
     "header header"
     "header header"
     "figure figure";
+  padding: 1rem;
+  margin: 0;
 }
 
 nav {
@@ -50,6 +52,7 @@ main {
   grid-row: 2;
   grid-column: 1;
   z-index: 1;
+  align-self: end;
 }
 
 .pano {
@@ -60,6 +63,7 @@ main {
 
 figure {
   margin: 0;
+  padding-top: 1rem;
 }
 
 ul {
@@ -67,6 +71,17 @@ ul {
   justify-content: space-around;
   font-family: "Patua One", sans-serif;
 }
+
+li {
+  list-style: none;
+}
+
+a {
+  text-decoration: underline;
+  color: #fff;
+  font-size: 2rem;
+}
+
 h2 {
   font-family: "Patua One", sans-serif;
   font-weight: bold;
